.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:23:28 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-gcc -o "TEST06_BLINKNING_SHERBINY.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\hossa\Desktop\ITIDA\NTI PROGRAM\NTI_ARM_PORTAL\TEST06_BLINKNING_SHERBINY\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TEST06_BLINKNING_SHERBINY.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: TEST06_BLINKNING_SHERBINY.elf
 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
arm-none-eabi-objdump -h -S  TEST06_BLINKNING_SHERBINY.elf  > "TEST06_BLINKNING_SHERBINY.list"
arm-none-eabi-objcopy  -O ihex  TEST06_BLINKNING_SHERBINY.elf  "TEST06_BLINKNING_SHERBINY.hex"
   text	   data	    bss	    dec	    hex	filename
   1828	      8	   1584	   3420	    d5c	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
Finished building: TEST06_BLINKNING_SHERBINY.list
Finished building: TEST06_BLINKNING_SHERBINY.hex
 
 
10:23:53 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
   text	   data	    bss	    dec	    hex	filename
   1828	      8	   1584	   3420	    d5c	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
10:24:28 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:16:12: warning: unused variable 'LOC_u8NewData' [-Wunused-variable]
   16 |         u8 LOC_u8NewData = 0 ;
      |            ^~~~~~~~~~~~~
arm-none-eabi-gcc -o "TEST06_BLINKNING_SHERBINY.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\hossa\Desktop\ITIDA\NTI PROGRAM\NTI_ARM_PORTAL\TEST06_BLINKNING_SHERBINY\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TEST06_BLINKNING_SHERBINY.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: TEST06_BLINKNING_SHERBINY.elf
 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
arm-none-eabi-objdump -h -S  TEST06_BLINKNING_SHERBINY.elf  > "TEST06_BLINKNING_SHERBINY.list"
arm-none-eabi-objcopy  -O ihex  TEST06_BLINKNING_SHERBINY.elf  "TEST06_BLINKNING_SHERBINY.hex"
   text	   data	    bss	    dec	    hex	filename
   1828	      8	   1584	   3420	    d5c	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
Finished building: TEST06_BLINKNING_SHERBINY.hex
Finished building: TEST06_BLINKNING_SHERBINY.list
 
 
10:24:32 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
   text	   data	    bss	    dec	    hex	filename
   1828	      8	   1584	   3420	    d5c	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
10:51:41 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-gcc "../Src/lcd.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/lcd.d" -MT"Src/lcd.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/lcd.o"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:17:12: warning: unused variable 'LOC_u8NewData' [-Wunused-variable]
   17 |         u8 LOC_u8NewData = 0 ;
      |            ^~~~~~~~~~~~~
arm-none-eabi-gcc -o "TEST06_BLINKNING_SHERBINY.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\hossa\Desktop\ITIDA\NTI PROGRAM\NTI_ARM_PORTAL\TEST06_BLINKNING_SHERBINY\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TEST06_BLINKNING_SHERBINY.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: TEST06_BLINKNING_SHERBINY.elf
 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
arm-none-eabi-objdump -h -S  TEST06_BLINKNING_SHERBINY.elf  > "TEST06_BLINKNING_SHERBINY.list"
arm-none-eabi-objcopy  -O ihex  TEST06_BLINKNING_SHERBINY.elf  "TEST06_BLINKNING_SHERBINY.hex"
   text	   data	    bss	    dec	    hex	filename
   1828	      8	   1584	   3420	    d5c	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
Finished building: TEST06_BLINKNING_SHERBINY.list
Finished building: TEST06_BLINKNING_SHERBINY.hex
 
 
10:52:38 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:45:36: error: expected ';' before 'while'
   45 |         CLCD_voidSendString("Hosa")
      |                                    ^
      |                                    ;
......
   49 |         while(1)
      |         ~~~~~                       
../Src/main.c:17:12: warning: unused variable 'LOC_u8NewData' [-Wunused-variable]
   17 |         u8 LOC_u8NewData = 0 ;
      |            ^~~~~~~~~~~~~
make: *** [Src/subdir.mk:58: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
10:52:43 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:17:12: warning: unused variable 'LOC_u8NewData' [-Wunused-variable]
   17 |         u8 LOC_u8NewData = 0 ;
      |            ^~~~~~~~~~~~~
arm-none-eabi-gcc -o "TEST06_BLINKNING_SHERBINY.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\hossa\Desktop\ITIDA\NTI PROGRAM\NTI_ARM_PORTAL\TEST06_BLINKNING_SHERBINY\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TEST06_BLINKNING_SHERBINY.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: TEST06_BLINKNING_SHERBINY.elf
 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
arm-none-eabi-objdump -h -S  TEST06_BLINKNING_SHERBINY.elf  > "TEST06_BLINKNING_SHERBINY.list"
arm-none-eabi-objcopy  -O ihex  TEST06_BLINKNING_SHERBINY.elf  "TEST06_BLINKNING_SHERBINY.hex"
   text	   data	    bss	    dec	    hex	filename
   2600	      8	   1584	   4192	   1060	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
Finished building: TEST06_BLINKNING_SHERBINY.list
Finished building: TEST06_BLINKNING_SHERBINY.hex
 
 
10:53:05 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
   text	   data	    bss	    dec	    hex	filename
   2600	      8	   1584	   4192	   1060	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
10:58:14 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:17:12: warning: unused variable 'LOC_u8NewData' [-Wunused-variable]
   17 |         u8 LOC_u8NewData = 0 ;
      |            ^~~~~~~~~~~~~
arm-none-eabi-gcc -o "TEST06_BLINKNING_SHERBINY.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\hossa\Desktop\ITIDA\NTI PROGRAM\NTI_ARM_PORTAL\TEST06_BLINKNING_SHERBINY\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TEST06_BLINKNING_SHERBINY.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: TEST06_BLINKNING_SHERBINY.elf
 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
arm-none-eabi-objdump -h -S  TEST06_BLINKNING_SHERBINY.elf  > "TEST06_BLINKNING_SHERBINY.list"
arm-none-eabi-objcopy  -O ihex  TEST06_BLINKNING_SHERBINY.elf  "TEST06_BLINKNING_SHERBINY.hex"
   text	   data	    bss	    dec	    hex	filename
   2596	      8	   1584	   4188	   105c	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
Finished building: TEST06_BLINKNING_SHERBINY.list
Finished building: TEST06_BLINKNING_SHERBINY.hex
 
 
10:58:17 **** Incremental Build of configuration Debug for project TEST06_BLINKNING_SHERBINY ****
make -j8 all 
arm-none-eabi-size   TEST06_BLINKNING_SHERBINY.elf 
   text	   data	    bss	    dec	    hex	filename
   2596	      8	   1584	   4188	   105c	TEST06_BLINKNING_SHERBINY.elf
Finished building: default.size.stdout
 
